syntax = "proto3";
package customer.service;

option java_multiple_files = true;
option java_package = "au.com.nab.icommerce.customer.service.api";

import "google/protobuf/wrappers.proto";
import "customer_common.proto";

service CustomerService {
  rpc createCustomer(customer.service.PCustomer) returns (google.protobuf.Int32Value);

  rpc getCustomerById(google.protobuf.Int32Value) returns (GetCustomerResponse);
}

message GetCustomerResponse {
  int32 code = 1;
  customer.service.PCustomer data = 2;
}